--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
     <meta name="description" content="Страница содержит идеи для путешествий по наиболее живописным местам России">
     <meta name="keywords" content="Anton Avtonomov, travel, trip, russia, байкал, алтай, кольский, куршская коса, путешествия, Россия">
     <link rel="stylesheet" href="./pages/index.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Pacifico&display=swap" rel="stylesheet">
     <title>Russian-Travel</title>
 </head>
 
@@ -26,6 +23,7 @@
                 <a class="header__lang-link" href="#">En</a>
             </div>
         </header>
+
         <section class="lead">
             <h1 class="lead__title">Путешествия по России</h1>
             <h2 class="lead__sub-title">Настоящая страна не в выпусках <br> новостей, а здесь.</h2>
@@ -122,6 +120,7 @@
                         кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.</p>
                 </div>
             </div>
+
             <div class="place">
                 <h3 class="place__title">Алтай</h3>
                 <div class="place__image">
@@ -139,6 +138,7 @@
                         обитатели Алтайского края.</p>
                 </div>
             </div>
+
             <div class="place">
                 <h3 class="place__title">Зимний Байкал</h3>
                 <div class="place__image">
@@ -155,6 +155,7 @@
                         фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
                 </div>
             </div>
+
             <div class="place">
                 <h3 class="place__title">Карелия</h3>
                 <div class="place__image">
@@ -183,11 +184,12 @@
                 </h4>
             </div>
         </section>
+
         <footer class="footer">
             <nav class="footer__menu">
                 <a class="link footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a>
                 <a class="link footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
-                <a class="link footer__link" href="https://rasp.yandex.ru" target="_blank">Распиание</a>
+                <a class="link footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a>
                 <a class="link footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
                 <a class="link footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
             </nav>
