--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <section class="lead">
             <h1 class="lead__title">Путешествия по России</h1>
-            <h2 class="lead__sub-title">Настоящая страна не в выпусках <br> новостей, а здесь.</h2>
+            <h2 class="lead__sub-title">Настоящая страна не в выпусках новостей, а здесь.</h2>
             <div class="lead__image">
                 <img class="lead__image-background" src="./images/lead/lead-background.png" alt="Изображение купе поезда">
                 <img class="lead__image-map" src="./images/lead/lead-map.png" alt="Изображение маршрута Путешествия">
